--- a/app/src/main/res/layout/layout_downlaod_dialog.xml
+++ b/app/src/main/res/layout/layout_downlaod_dialog.xml
@@ -1,85 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="0dp"
-    app:cardCornerRadius="10dp"
-    android:layout_marginBottom="15dp">
+    android:orientation="vertical"
+    android:paddingBottom="15dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:gravity="center"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="15dp">
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:paddingBottom="7dp"
+        android:paddingEnd="30dp"
+        android:paddingStart="15dp"
+        android:paddingTop="15dp">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
+        <ImageView
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingStart="15dp"
-            android:paddingTop="15dp"
-            android:paddingEnd="30dp"
-            android:paddingBottom="7dp">
+            android:layout_width="wrap_content"
+            android:src="@drawable/ic_cloud_download" />
 
-            <androidx.appcompat.widget.AppCompatImageView
+        <LinearLayout
+            android:gravity="center|right"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
+                android:text="@string/string_title_download_dialog"
+                android:textColor="@color/black"
+                android:textSize="16dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/text_view_title_file"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_cloud_download" />
+                android:layout_marginTop="4dp"
+                android:layout_width="wrap_content"
+                android:text="imageWallpaper.jpg"
+                android:textSize="13sp" />
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center|right"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/string_title_download_dialog"
-                    android:textColor="@color/black"
-                    android:textSize="16dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/text_view_title_file"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="imageWallpaper.jpg"
-                    android:textSize="13sp" />
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-        <ProgressBar
-            android:id="@+id/progress_bar_download"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:progressTint="@color/purple_500" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
-            android:gravity="center"
-            android:text="@string/string_waiting_download_dialog"
-            android:textSize="12dp" />
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
+        </LinearLayout>
 
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:id="@+id/progress_bar_download"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_width="match_parent"
+        android:progressTint="@color/purple_500" />
+
+
+</LinearLayout>
