--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -62,6 +62,7 @@
                     android:id="@+id/edt_search"
                     android:layout_width="0dp"
                     android:layout_height="45dp"
+                  android:layoutDirection="rtl"
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:ellipsize="end"
@@ -171,7 +172,9 @@
                 android:id="@+id/layout_suggestion_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/color_background_gallery_item"
                 android:orientation="vertical">
+
 
                 <TextView
                     android:layout_width="match_parent"
@@ -180,7 +183,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:gravity="center|right"
-                    android:text="پیشنهاد شده برای شما"
+                    android:text="محبوب ترین تصاویر"
                     android:textColor="@color/black"
                     android:textSize="16dp"
                     android:textStyle="bold" />
@@ -207,8 +210,8 @@
                     android:orientation="vertical"
                     android:paddingLeft="7dp"
                     app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-                    app:spanCount="4"
-                    tools:itemCount="10"
+                    app:spanCount="3"
+                    tools:itemCount="6"
                     tools:listitem="@layout/item_suggest_photo" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
