--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -62,13 +62,13 @@
                     android:id="@+id/edt_search"
                     android:layout_width="0dp"
                     android:layout_height="45dp"
-                  android:layoutDirection="rtl"
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:ellipsize="end"
                     android:hint="@string/string_hint_edittext_search"
                     android:imeOptions="actionSearch"
                     android:inputType="text"
+                    android:layoutDirection="rtl"
                     android:maxLines="1"
                     android:paddingRight="10dp"
                     android:textColor="@color/black"
@@ -182,6 +182,8 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
+                    android:drawableRight="@drawable/ic_favorites"
+                    android:drawablePadding="4dp"
                     android:gravity="center|right"
                     android:text="محبوب ترین تصاویر"
                     android:textColor="@color/black"
